# aiffel_camp

./: .gitignore  README.md
NLP/: word_vocab.ipynb
NLP/Aiffel_MainQuest4/: 온8기_MainQuest4_김주현.tex
NLP/BoW/: .gitignore  bag_of_words.ipynb
NLP/bert/: .gitignore  README.md  bert.ipynb
NLP/chatbot/: README.md  chatbot.ipynb
NLP/huggingface transformer/: README.md  huggingface_klue.ipynb  huggingface_practice.ipynb  klue_nsmc.ipynb
NLP/kochatgpt/: README.md  kochatgpt.ipynb
NLP/model/: korean_spm.model  korean_spm.vocab
NLP/sentence_piece/: README.md  word_vocab.ipynb
NLP/seq2seq with attention/: README.md  seq2seq_translator.ipynb
NLP/transofrmer/: .gitignore  README.md  en_spm.model  en_spm.vocab  ko_spm.model  ko_spm.vocab  transformer.ipynb  translator.ipynb
NLP/word embedding/: README.md  Word2Vec.ipynb  embedding_weat.ipynb
aiffel_main/: README_review_양식.md
aiffel_main/DLThon1/: .gitignore  DL.ipynb  EDA.ipynb  README.md  code_for_ensemble.ipynb  ensemble .ipynb  ensemble.ipynb  fasttext.ipynb  fasttext_predictions.npy  janghyeon_simple_test1.ipynb  kobert-tokenizer Transformer.ipynb  kobert-tokenizer biSLTM 5M.ipynb  lstm_mecab.ipynb  lstm_predictions.npy  make_data_file copy.ipynb  make_data_file.ipynb  preprocessing.py  transformer.py  wandb_janghyeon.ipynb
aiffel_main/GPT/: gpt.ipynb
docker/: .gitignore
docker/5_mlops/app/: Dockerfile.fastapi  README.md  pyproject.toml
docker/5_mlops/app/src/: main.py  settings.py
docker/5_mlops/app/src/models/: model.py  naver_vocab.json  router.py  schemas.py
model/: transformer.py
(+491 files in other folders)
