[tool.poetry]
name = "naver-sa"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.4.0"
fastapi = "0.111.1"
pydantic = "2.8.2"
uvicorn = "0.30.3"
kiwipiepy = "0.18.0"
pydantic-settings = "^2.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
